test/trivial/roxana/test_param_decl2.good
Error: Initializing parameter to a variable expression. (test/trivial/roxana/test_param_decl2.chpl:2)